Elegance/v0.0.5/userChrome.css
/* ... */
#appMenu-fullscreen-button2:not(:not([disabled]):where(:hover,:active)) > .toolbarbutton-icon { background-color:#0000 !important; }

/* [ FIND BAR ] */
.browserContainer > findbar
{
	contain:layout !important;
	position:absolute !important;
	top:10px;
	right:10px;
	background-color:var(--panel-background) !important;
	padding-block:7.5px !important;
	border:none !important;
	border-radius:var(--uc-radius-ml) !important;
	box-shadow:var(--box-shadow-level-2);
	transition-property:transform, filter, opacity, visibility !important;
	transition-duration:var(--uc-trans-ms) !important;
	transition-timing-function:var(--uc-trans-curve) !important;
	overflow:visible !important;

	& .findbar-container { display:block !important; min-width:300px; height:unset !important; margin-inline:7.5px !important; margin-block-end:-2px !important; }
	& .findbar-container > hbox { margin-block-end:7.5px; }
	& .findbar-textbox { width:100% !important; background-color:var(--toolbar-field-background-color) !important; border-radius:var(--uc-radius-round) !important; }
	& .findbar-textbox.minimal { margin-inline-end:37.5px !important; }
	& .findbar-find-next { margin-inline-end:30px !important; }
	& .findbar-container > checkbox { margin:0 7px !important; display:inline-flex !important; }
	/*& .findbar-container > checkbox:first-of-type, & .findbar-container > checkbox:last-of-type { margin:0 !important; }*/
	/*& .findbar-container > checkbox:first-of-type { margin-inline:4px 8px !important; }
	& .findbar-container > checkbox:last-of-type { margin-inline:8px 4px !important; }*/
	/*& .findbar-label { margin:2px 8px 0 !important; text-align:center !important; }*/
	/*& .findbar-label:not([hidden]) { display:flow-root !important; }*/
	& .findbar-label { display:none !important; position:absolute; background-color:var(--panel-background) !important; border-radius:var(--uc-radius-round) !important; padding:3.75px 8.75px !important; bottom:-31px; left:50%; transform:TranslateX(-50%) !important; box-shadow:var(--box-shadow-level-2); transition:transform var(--uc-trans); }
	& .findbar-find-status { font-weight:normal !important; }
	& .found-matches, .findbar-find-status { display:flow-root !important; }
	& .found-matches[hidden], .findbar-find-status:empty { transform:TranslateX(-50%) Scale(0) !important; }
	& .found-matches[value='']:before { display:none !important; }
	& .found-matches[value='']:after { content:'0 of 0 matches' !important; display:block !important; }
	& toolbarbutton { border-radius:var(--uc-radius-ms) !important; }
	& .findbar-closebutton { box-sizing:content-box; position:absolute !important; top:7.5px; right:7.5px; margin:0 !important; padding:4px 7px !important; width:16px !important; height:16px !important; }

	&:where([hidden]) { transform:Translate(224px, -64px) Scale(0); filter:blur(100px); opacity:0; }

	:has(.findbar-textbox.minimal) &
	{
		& .findbar-container > checkbox { display:none !important; }
		& .findbar-container > hbox { margin-block-end:4px}
	}

	:root[lwtheme-image] &
	{
		/* 28 is a magic number, it will only be perfectly lined up at initial scaling */
		background-position:right -10px top calc(100% / 2 - 28px) !important;

		.findbar-find-status:empty & { background:red !important; }
	}
}

/* [ STATUS PANEL ] */
#statuspanel
{
	margin:5px !important;

	& > #statuspanel-label { border:0 !important; border-radius:var(--uc-radius-small) !important; padding:3.75px 7.5px !important; box-shadow:var(--box-shadow-level-1); }
}

/* [ SPLIT VIEW ] */
#tabbrowser-tabpanels[splitview]
{
	background-color:var(--toolbar-bgcolor);

	& > .split-view-panel
	{
		overflow:visible !important;

		&[column="0"] { margin:4px 0 4px 4px !important; }
		&[column="1"] { margin:4px 4px 4px 0 !important; }
	}

	.browserContainer { outline:0 !important; border-radius:var(--uc-radius-small) !important; box-shadow:var(--box-shadow-level-3) !important; }
	.split-view-splitter { background:#0000 !important; border:0 !important; min-width:4px !important; }
	split-view-footer { display:none !important; }
}

/* [ OPTIONAL: TRANSPARENCY FX ] */
@media (-moz-windows-mica)
{
	:root
	{
		--uc-mica-backdrop:light-dark(#fff4, #0007);
		--uc-mica-toolbar-color:color-mix(in srgb, var(--toolbar-bgcolor), #0000 40%);
		--uc-mica-browser-background:color-mix(in srgb, var(--toolbar-bgcolor), #0000 80%);
		--ff-mica-color:light-dark(#fff9, #ffffff26);
		--tabpanel-background-color:#0000 !important;
		--tab-selected-bgcolor:var(--ff-mica-color) !important;

		background-color:var(--uc-mica-backdrop) !important;
	}

	@media not -moz-pref("sidebar.verticalTabs")
	{
		#browser:not(.browser-toolbox-background) { background-color:var(--uc-mica-browser-background) !important; }
		.browser-toolbar:not(.browser-titlebar) { background-color:var(--uc-mica-toolbar-color) !important; }

		:root:has(#tabbrowser-tabpanels[splitview]) #browser { background-color:#0000 !important; }
		#tabbrowser-tabpanels[splitview]
		{
			background-color:var(--uc-mica-toolbar-color) !important;

			.browserContainer { background-color:var(--uc-mica-browser-background) !important; }
		}

		/* hacky sidebar fix, kinda shitty tbh */
		@media -moz-pref("sidebar.revamp")
		{
			:root:not([inDOMFullscreen])
			{
				& #tabbrowser-tabbox[sidebar-shown] { box-shadow:-400px 0 0 light-dark(#fff4, #fff1), 400px 0 0 light-dark(#fff4, #fff1) !important; }
			}
		}
	}
}

/* [ OPTIONAL: AD BLOCK ] */
#PanelUI-fxa-cta-menu, #PanelUI-fxa-menu-services { display:none !important; }

/* [ OPTIONAL: DECLUTTER CONTEXT MENUS ] */
#context-sendimage, #context-sep-setbackground, #context-setDesktopBackground, #context-inspect-a11y { display:none !important; }

